# blockchain-rag

./: .gitignore  config.py  docker-compose.yml  model_choice.py  pyproject.toml
api/: deps.py  main.py
api/routes/: agent.py  ingest.py  query.py
data/chroma/: chroma.sqlite3
eval/: golden_set.json
eval/results/: recall_20260618T114808Z.json
infra/migrations/: 000001_init_schema.down.sql  000001_init_schema.up.sql
migrations/: 000001_init_phase0_rag_schema.down.sql  000001_init_phase0_rag_schema.up.sql  000002_add_onchain_graph_tables.down.sql  000002_add_onchain_graph_tables.up.sql  000003_dedupe_and_constrain_token_transfers.down.sql  000003_dedupe_and_constrain_token_transfers.up.sql  000004_grant_readonly_onchain_tables.down.sql  000004_grant_readonly_onchain_tables.up.sql
scripts/: eval_recall.py  seed_corpus.py  seed_docs.json
services/agent/: prompts.py  react_agent.py
services/graph/: neo4j_loader.py
services/ingestion/: chunker.py  embedder.py  onchain_confirmation.py  onchain_loader.py  pipeline.py
services/retrieval/: chroma_retriever.py  graph_retriever.py
services/tools/: cypher_validator.py  graph_cypher_test.py  graph_query.py  graph_schema_context.py  schema_context.py  sql_validator.py  text_to_sql.py  text_to_sql_test.py  vector_retrieval.py
shared/: contracts.py
tests/: test_query_edges.py
