[project]
name = "blockchain-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Pulkit Singh",email = "pulkyeet@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.30,<0.31",
    "python-dotenv>=1.0,<2.0",
    "pydantic-settings>=2.2,<3.0",
    "chromadb>=0.5,<1.0",
    "sentence-transformers>=3.0,<4.0",
    "tiktoken>=0.7,<1.0",
    "anthropic>=0.28,<2.0",
    "openai>=1.30,<2.0",
    "psycopg[binary]>=3.1,<4.0",
    "google-cloud-bigquery (>=3.42.0,<4.0.0)",
]

[tool.poetry]
package-mode = false
[dependency-groups]
dev = [
    "pytest (>=9.1.0,<10.0.0)"
]
